# TensorRT_FasterRcnn_Windows

./: CMakeLists.txt  README.md
data/: faster_rcnn_test_iplugin.prototxt
include/: fasterrcnn.hpp
src/: fasterrcnn.cpp  main.cpp
